--- a/The Mars Project/client/components/navbar/navbar.html
+++ b/The Mars Project/client/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-top" ng-controller="NavbarController">
+<div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <a href="/" class="navbar-brand">The Mars Project</a>
