--- a/The Mars Project/client/components/navbar/navbar.html
+++ b/The Mars Project/client/components/navbar/navbar.html
@@ -3,8 +3,12 @@
     <div class="navbar-header">
       <a href="/" class="navbar-brand">The Mars Project</a>
     </div>
+    <ul class="nav navbar-nav navbar-left">
+      <li><a href="/apod">APOD</a></li>
+    </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/signup">Sign Up</a></li>
       <li><a href="/login">Login</a></li>
+    </ul>
   </div>
 </div>
