Add login/signup pages, styled several homepage, and got APOD page to work.

--- a/The Mars Project/client/components/footer/footer.html
+++ b/The Mars Project/client/components/footer/footer.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container">
+  <div id="footer" class="container-fluid">
     <div class="navbar-footer">
-      <a href="http://www.github.com/CodeRISHI" class="navbar-brand">&copy Arun Vasudevan</a>
+      <a href="http://www.github.com/CodeRISHI" id="footer-text" class="navbar-brand">&copy Arun Vasudevan</a>
     </div>
   </div>
 </div>
