--- a/The Mars Project/client/components/navbar/navbar.html
+++ b/The Mars Project/client/components/navbar/navbar.html
@@ -1,14 +1,14 @@
 <div class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <div id="header" class="container-fluid">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand">The Mars Project</a>
+      <a href="#/" id="header-title" class="navbar-brand">The Mars Project</a>
     </div>
     <ul class="nav navbar-nav navbar-left">
-      <li><a href="/apod">APOD</a></li>
+      <li><a href="#/apod">APOD</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="/signup">Sign Up</a></li>
-      <li><a href="/login">Login</a></li>
+      <li><a href="#/signup">Sign Up</a></li>
+      <li><a href="#/login">Login</a></li>
     </ul>
   </div>
 </div>
