Update CSS styling and moved Navbar and Footer 'ng-include' to index.html to apply across site.

--- a/The Mars Project/client/styles/style.css
+++ b/The Mars Project/client/styles/style.css
@@ -71,9 +71,9 @@ body {
   height: 480px;
 }
 #rover-info {
-  display: inline-flex;
+  display: inline;
   text-align: center;
-  padding: 8px;
+  padding: -5px;
   margin: 0 auto;
 }
 
